# jproteina-complexa

./: .gitignore  pyproject.toml
scripts/: convert_weights.py
src/jproteina_complexa/: backend.py  cli.py  constants.py  flow_matching.py  hub.py  pdb.py  serialization.py  target_features.py  types.py
src/jproteina_complexa/nn/: __init__.py  adaptive.py  attention.py  decoder.py  encoder.py  features.py  layers.py  local_latents_transformer.py  models.py  primitives.py  register.py  transformer.py  transition.py
tests/: conftest.py  test_binder_generation.py  test_decode_compare.py  test_decoder_jax.py  test_decoder_torch.py  test_denoiser_compare.py  test_flow_matching.py  test_full_pipeline_compare.py  test_pt_generate_ubq.py  test_pt_ubq.py  test_real_protein.py  test_real_weights.py  test_roundtrip.py  test_sampling_compare.py  test_torch_free.py
