[project]
name = "jproteina-complexa"
version = "0.1.0"
description = "JAX/Equinox protein binder design (Proteina-Complexa port)"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.4.20",
    "equinox>=0.11.0",
    "einops>=0.6",
    "jaxtyping",
    "numpy>=1.23",
    "gemmi",
    "huggingface_hub",
]

[project.optional-dependencies]
convert = [
    "torch",
    "scipy",
    "omegaconf",
    "dm-tree",
    "loguru",
]

[project.scripts]
jpc-generate = "jproteina_complexa.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jproteina_complexa"]
